--- a/app/composer.json
+++ b/app/composer.json
@@ -1,5 +1,13 @@
 {
   "require": {
     "php-amqplib/php-amqplib": ">=2.6.1"
+  },
+  "autoload": {
+    "psr-4": {
+      "Src\\": "src/"
+    },
+    "files": [
+      "src/routes.php"
+    ]
   }
 }
